--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start:dev": "NODE_ENV=development node ./index.js",
-    "start:prod": "NODE_ENV=production node ./index.js",
-    "dev": "NODE_ENV=development nodemon ./index.js",
-    "prod": "NODE_ENV=production nodemon ./index.js",
-    "ssl": "../scripts/ssl.sh"
+    "start": "nodemon ./index.js",
+    "ssl": "scripts/ssl.sh"
   },
   "dependencies": {
     "chalk": "^4.1.0",
